--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,47 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import TiltCard from '@/components/TiltCard.astro'
+import Layout from '../layouts/Layout.astro'
+import { Icon } from 'astro-icon'
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
-	</main>
+<Layout title='Nuno Góis - Full-Stack Developer'>
+  <TiltCard>
+    <div class='bg-bg p-4 rounded-md z-10'>
+      <div class='max-w-xs md:flex md:max-w-md'>
+        <img
+          src='/avatar.jpg'
+          alt='avatar'
+          class='w-full h-auto mx-auto rounded-md object-cover md:w-24 md:h-24'
+        />
+        <div class='flex flex-col mt-2 md:ml-4 md:mt-0'>
+          <div class='flex flex-col sm:flex-row items-center justify-between'>
+            <h1 class='text-lg sm:text-xl md:text-2xl'>Nuno Góis</h1>
+            <div class='flex gap-1 my-2 md:my-0'>
+              <a href='https://github.com/nunogois' target='_blank'
+                ><Icon name='mdi:github' class='w-6 h-6' /></a
+              >
+              <a href='https://twitter.com/nunogois_dev' target='_blank'
+                ><Icon name='mdi:twitter' class='text-icon-tw w-6 h-6' /></a
+              >
+              <a href='https://www.linkedin.com/in/nuno-gois' target='_blank'
+                ><Icon name='mdi:linkedin' class='text-icon-ln w-6 h-6' /></a
+              >
+              <a href='mailto:me@nunogois.com' target='_blank'
+                ><Icon name='mdi:email' class='text-icon-mail w-6 h-6' /></a
+              >
+              <a href='https://www.nunogois.com' target='_blank'
+                ><Icon name='mdi:web-box' class='text-icon-web w-6 h-6' /></a
+              >
+            </div>
+          </div>
+          <h2 class='text mt-1'>Full-Stack Developer</h2>
+          <p class='text-xs mt-1'>
+            Driven 33 years old from Portugal with over 11 years of professional
+            experience. Passionate for the job, love putting skills to the test,
+            facing challenges in a creative and perfectionist way.
+          </p>
+        </div>
+      </div>
+    </div>
+  </TiltCard>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1.5rem;
-		max-width: 60ch;
-	}
-	h1 {
-		font-size: 3rem;
-		font-weight: 800;
-		margin: 0;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		line-height: 1.6;
-		margin: 1rem 0;
-		border: 1px solid rgba(var(--accent), 25%);
-		background-color: white;
-		padding: 1rem;
-		border-radius: 0.4rem;
-	}
-	.instructions code {
-		font-size: 0.875em;
-		font-weight: bold;
-		background: rgba(var(--accent), 12%);
-		color: rgb(var(--accent));
-		border-radius: 4px;
-		padding: 0.3em 0.45em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 1rem;
-		padding: 0;
-	}
-</style>
