vertical only, fix scroll, optimize img, misc improvements

--- a/src/components/TiltCard.astro
+++ b/src/components/TiltCard.astro
@@ -1,4 +1,4 @@
-<div id='tilt-card' class='border-rgb rounded-md'><slot /></div>
+<div id='tilt-card' class='border-rgb rounded-md m-4'><slot /></div>
 
 <script>
   import VanillaTilt from 'vanilla-tilt'
