--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const years = (date: string) => {
         <img
           src='/avatar.webp'
           alt='avatar'
-          class='w-full h-auto rounded-md object-cover'
+          class='w-full h-auto rounded-md object-cover select-none pointer-events-none'
         />
         <div class='flex flex-col mt-2'>
           <div class='flex flex-col sm:flex-row items-center justify-between'>
@@ -48,7 +48,7 @@ const years = (date: string) => {
               <a
                 href='https://www.nunogois.com/cv'
                 target='_blank'
-                class='font-bold'>CV</a
+                class='font-bold select-none'>CV</a
               >
               <a href='mailto:me@nunogois.com' target='_blank'
                 ><Icon name='mdi:email' class='text-icon-mail w-6 h-6' /></a
